assembly resolution error now includes what type was being resolved. This information is included in the inner exception, so it's only shown when --debug is used on the command line. This helps troubleshoot errors like #353

--- a/mdoc/mdoc.csproj
+++ b/mdoc/mdoc.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Mono.Documentation\Updater\Frameworks\FXUtils.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Mono.Documentation\Updater\Frameworks\MDocMetadataResolver.cs" />
+    <Compile Include="Mono.Documentation\MDocException.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\defaulttemplate.xsl">
