all interfaces are now listed. Closes #334

--- a/mdoc/mdoc.Test/mdoc.Test.csproj
+++ b/mdoc/mdoc.Test/mdoc.Test.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Enumeration\EnumeratorTests.cs" />
     <Compile Include="Enumeration\ExceptionTests.cs" />
     <Compile Include="Enumeration\CecilBaseTest.cs" />
+    <Compile Include="Enumeration\InterfaceTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config">
