Adding some attached entity unit tests. Preparing for #367

--- a/mdoc/mdoc.Test/mdoc.Test.csproj
+++ b/mdoc/mdoc.Test/mdoc.Test.csproj
@@ -75,6 +75,7 @@
     <Compile Include="BasicTests.cs" />
     <Compile Include="CppWinRtMembersTests.cs" />
     <Compile Include="CppWinRtFormatterTests.cs" />
+    <Compile Include="Enumeration\AttachedEntityTests.cs" />
     <Compile Include="FrameworkIndexHelperTests.cs" />
     <Compile Include="DocUtilsFSharpTests.cs" />
     <Compile Include="DocUtilsTests.cs" />
