--- a/mdoc/mdoc.Test/packages.config
+++ b/mdoc/mdoc.Test/packages.config
@@ -3,4 +3,5 @@
   <package id="FSharp.Core" version="4.3.4" targetFramework="net461" />
   <package id="Mono.Cecil" version="0.10.0-beta5" targetFramework="net45" />
   <package id="NUnit" version="3.10.1" targetFramework="net471" />
+  <package id="NUnit3TestAdapter" version="3.13.0" targetFramework="net471" />
 </packages>
