--- a/mdoc/Makefile
+++ b/mdoc/Makefile
@@ -46,8 +46,8 @@ EXTRA_DISTFILES = \
 MULTI-CLASSIC = Test/DocTest-DropNS-classic.dll Test/DocTest-DropNS-classic-multitest.dll
 MULTI-UNIFIED = Test/DocTest-DropNS-unified.dll Test/DocTest-DropNS-unified-multitest.dll
 
-DIFF = diff -rup
-DIFF_QUIET = diff --brief
+DIFF = diff -rup -Z
+DIFF_QUIET = diff --brief -Z
 ifeq ($(PLATFORM), win32)
 DIFF = diff -rupZ
 DIFF_QUIET = diff --brief -Z
@@ -124,7 +124,7 @@ Test/DocTest.dll-v1:
 Test/DocTest.dll-v2: 
 	-rm -f Test/DocTest.cs
 	cp Test/DocTest-v1.cs Test/DocTest.cs
-	cd Test && patch -p0 < DocTest-v2.patch
+	cd Test && patch -p0 --binary < DocTest-v2.patch
 	-rm -f Test/DocTest.dll
 	$(MAKE) Test/DocTest.dll
 
