--- a/mdoc/mdoc.csproj
+++ b/mdoc/mdoc.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -105,6 +105,7 @@
     <Compile Include="Mono.Documentation\Updater\Statistics\StatisticsMetrics.cs" />
     <Compile Include="Mono.Documentation\Updater\Statistics\StatisticsSaver.cs" />
     <Compile Include="Mono.Documentation\Updater\Statistics\StatisticsStorage.cs" />
+    <Compile Include="Mono.Documentation\Updater\TypeMap.cs" />
     <Compile Include="Mono.Documentation\Util\ApiStyle.cs" />
     <Compile Include="Mono.Documentation\Updater\DocUtils.cs" />
     <Compile Include="Mono.Documentation\Util\AttachedEventDefinition.cs" />
