--- a/mdoc/mdoc.Test/mdoc.Test.csproj
+++ b/mdoc/mdoc.Test/mdoc.Test.csproj
@@ -92,6 +92,9 @@
     <Compile Include="JsUsageFormatterTests.cs" />
     <Compile Include="MDocFileSourceTests.cs" />
     <Compile Include="MDocUpdaterTests.cs" />
+    <Compile Include="SampleClasses\EiiImplementclass.cs" />
+    <Compile Include="SampleClasses\Interface_A.cs" />
+    <Compile Include="SampleClasses\Interface_B.cs" />
     <Compile Include="SampleClasses\InternalEIICalss.cs" />
     <Compile Include="SampleClasses\NullablesAndTuples.cs" />
     <Compile Include="SampleClasses\StaticClass.cs" />
