Add support for C# 8.0 nullable reference types feature (#532)
https://dev.azure.com/ceapex/Engineering/_workitems/edit/317995?src=WorkItemMention&src-action=artifact_link

--- a/mdoc/mdoc.Test/mdoc.Test.csproj
+++ b/mdoc/mdoc.Test/mdoc.Test.csproj
@@ -92,6 +92,7 @@
     <Compile Include="JsUsageFormatterTests.cs" />
     <Compile Include="MDocFileSourceTests.cs" />
     <Compile Include="MDocUpdaterTests.cs" />
+    <Compile Include="NullableReferenceTypesTests.cs" />
     <Compile Include="SampleClasses\EiiImplementclass.cs" />
     <Compile Include="SampleClasses\Interface_A.cs" />
     <Compile Include="SampleClasses\Interface_B.cs" />
