Enabling Guid type projection for C++/WinRT and C++/CX. (#546)
https://dev.azure.com/ceapex/Engineering/_workitems/edit/344653

--- a/mdoc/mdoc.Test/mdoc.Test.csproj
+++ b/mdoc/mdoc.Test/mdoc.Test.csproj
@@ -97,6 +97,7 @@
     <Compile Include="NullableReferenceTypesTests.cs" />
     <Compile Include="SampleClasses\ApplePlatformEnum.cs" />
     <Compile Include="SampleClasses\EiiImplementclass.cs" />
+    <Compile Include="SampleClasses\GuidClass.cs" />
     <Compile Include="SampleClasses\Interface_A.cs" />
     <Compile Include="SampleClasses\Interface_B.cs" />
     <Compile Include="SampleClasses\InternalEIICalss.cs" />
