Update nuget feedCredential name

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -153,4 +153,4 @@ steps:
     command: 'push'
     packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
     nuGetFeedType: 'external'
-    publishFeedCredentials: 'modc_nuget_org'
+    publishFeedCredentials: 'mdoc_nuget_org'
