Fix long file name issue for Azure PowerShell .NET Reference (#589)
* Fixed long file name for Azure PowerShell .NET Reference

* update

* fix path with forward slash issue

* Updated

* Add log to debug CI pipeline

* Handle relative path

* Check platform info for long path handling

* Remove debug log

* Add unit test

* Remove expected long name file because it cause git push/pull issue

* Retarget Mono.Cecil library to net471

--- a/mdoc/mdoc.csproj
+++ b/mdoc/mdoc.csproj
@@ -46,6 +46,9 @@
     <Reference Include="Mono.Cecil.Rocks, Version=0.10.0.0, Culture=neutral, PublicKeyToken=50cebf1cceb9d05e, processorArchitecture=MSIL">
       <HintPath>..\packages\Mono.Cecil.0.10.0-beta5\lib\net40\Mono.Cecil.Rocks.dll</HintPath>
     </Reference>
+    <Reference Include="SchwabenCode.QuickIO, Version=2.6.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\QuickIO.NET.2.6.2.0\lib\net45\SchwabenCode.QuickIO.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
