--- a/mdoc/packages.config
+++ b/mdoc/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Mono.Cecil" version="0.10.0-beta5" targetFramework="net45" />
+  <package id="Mono.Cecil" version="0.10.0-beta5" targetFramework="net471" />
+  <package id="QuickIO.NET" version="2.6.2.0" targetFramework="net471" />
 </packages>
